@@ -37,5 +37,5 @@
     "webRequestBlocking",
     "*://*/*"
   ],
-  "version": "3.2.4.1"
+  "version": "3.2.4.2"
 }
