@@ -2,7 +2,9 @@
 Changelog Bypass Paywalls Clean - Chrome
 
 Post-release
+Add Sabado.pt
 Fix Australia News Corp (amp-fix)
+Fix Cmjornal.pt & Record.pt (amp)
 
 * v3.2.4.0 (2023-07-09)
 Add Delish, Elle Decor, Harper's Bazaar & Oprah Daily (Hearst)
